--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-    "name": "tpack-processed",
+    "name": "tpack-all",
     "version": "1.0.0",
-    "description": "排除已解析过的文件",
+    "description": "包含 TPACK 所有常用功能的项目",
     "repository": {
         "type": "git",
-        "url": "git+ssh://git@github.com/tpack/tpack-processed.git"
+        "url": "git+ssh://git@github.com/tpack/tpack-all.git"
+    },
+    "main": "./tpack.js",
+    "bin": {
+        "tpack-all": "./tpack.js"
     },
     "bugs": {
-        "url": "https://github.com/tpack/tpack-processed/issues",
+        "url": "https://github.com/tpack/tpack-all/issues",
         "email": "xuld@vip.qq.com"
     },
     "author": {
@@ -17,6 +21,15 @@
     "license": "MIT",
     "dependencies": {
         "tpack": "*",
-        "processed": "*"
+		"tpack-assets": "*",
+		"tpack-less": "*",
+		"tpack-autoprefixer": "*",
+		"tpack-tpack-clean-css": "*",
+		"tpack-coffee-script": "*",
+		"tpack-concat": "*",
+		"tpack-es6": "*",
+		"tpack-rename": "*",
+		"tpack-sass": "*",
+		"tpack-uglify-js": "*",
     }
 }
